samples/_failures_safe/1761728922_467788_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_330063c7.c: In function ‘main’:
./samples/SAFE/__tmp_330063c7.c:157:33: error: missing terminating ' character
  157 |             while (getchar() != '\
      |                                 ^~
./samples/SAFE/__tmp_330063c7.c:157:13: error: expected expression at end of input
  157 |             while (getchar() != '\
      |             ^~~~~
./samples/SAFE/__tmp_330063c7.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_330063c7.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_330063c7.c:157:13: error: expected declaration or statement at end of input
